infrastructure/controllers/production/authentication/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: controller-authentication
  labels:
    pod-security.kubernetes.io/enforce: restricted
